erDiagram
    User {
        ObjectId Id PK
        string Email
        string PasswordHash
        string Name
        string Avatar
        string Role
        string Provider
        string ProviderId
    }
    CreditCard {
        ObjectId Id PK
        string Name
        string Bank
        string BankName
        string BankLogo
        string ImageUrl
        string Link
        string RegisterUrl
        decimal AnnualFee
        array CashbackRules
        decimal MinSalary
        string Description
        array Benefits
        string CreditLimit
        string InterestRate
        string TermsPdfUrl
    }
    SpendingData {
        ObjectId Id PK
        string UserId FK
        decimal Amount
        decimal Salary
        string Category
        DateTime Date
        string Description
        string IncomeLevel
        string SpendingHabit
        string CreditScoreRange
        string RecommendedCardType
    }
    CardPromotion {
        ObjectId Id PK
        string Title
        string Description
        string ImageUrl
        string DiscountRate
        string CategoryTab
        string SourceUrl
        string StartDate
        string ValidUntil
        array ApplicableCards
        DateTime CreatedAt
        DateTime UpdatedAt
    }
    Category {
        ObjectId Id PK
        string Name
        string Color
        string Icon
        array MccCodes
        bool IsFrequent
    }
    Article {
        ObjectId Id PK
        string Title
        string Slug
        string Excerpt
        string Content
        string Category
        string Author
        string CoverImage
        DateTime CreatedAt
        DateTime UpdatedAt
    }
    ArticleCategory {
        ObjectId Id PK
        string Name
        string Slug
        string Description
        string Color
        DateTime CreatedAt
        DateTime UpdatedAt
    }
    ChatLog {
        ObjectId Id PK
        string SessionId
        string UserId FK
        string Message
        string Reply
        string Intent
        array SuggestedCardIds
        array QuickReplies
        int ResponseTimeMs
        DateTime CreatedAt
    }
    User ||--o{ SpendingData : "co cac"
    User ||--o{ ChatLog : "co cac"
    CreditCard ||--o{ CardPromotion : "co cac"
    ArticleCategory ||--o{ Article : "co cac"
